--- a/App/App.csproj
+++ b/App/App.csproj
@@ -3,8 +3,16 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>Nrrdio.Ynab.App</AssemblyName>
-    <RootNamespace>Nrrdio.Ynab.App</RootNamespace>
+    <AssemblyName>App</AssemblyName>
+    <RootNamespace>App</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nrrdio.Utilities\Nrrdio.Utilities\Nrrdio.Utilities.csproj" />
+  </ItemGroup>
 
 </Project>
