--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Nrrdio.Ynab.Client</AssemblyName>
+    <RootNamespace>Nrrdio.Ynab.Client</RootNamespace>
   </PropertyGroup>
 
 </Project>
