--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -4,6 +4,10 @@
             "Default": "Warning"
         }
     },
+    "GzipWebClient": {
+        "UserAgent": "YNAB API v1 Client/1.0 (github.com/jyarbro/Nrrdio.Ynab; james@yarbro.family)",
+        "Timeout": 2000
+    },
     "YNAB": {
         "EndPoint": "https://api.youneedabudget.com/v1"
     }
