--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Nrrdio.Utilities"]
 	path = Nrrdio.Utilities
 	url = https://github.com/jyarbro/Nrrdio.Utilities.git
+[submodule "core"]
+	path = MacrossSoftware
+	url = https://github.com/Macross-Software/core.git
