--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -5,7 +5,7 @@
         }
     },
     "GzipWebClient": {
-        "UserAgent": "YNAB API v1 Client/1.0 (github.com/jyarbro/Nrrdio.Ynab; james@yarbro.family)",
+        "UserAgent": "Nrrdio YNAB API Client/1.0 (github.com/jyarbro/Nrrdio.Ynab; james@yarbro.family)",
         "Timeout": 2000
     },
     "YNAB": {
