--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -1,18 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>Nrrdio.Ynab.Client</AssemblyName>
-    <RootNamespace>Nrrdio.Ynab.Client</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <AssemblyName>Nrrdio.Ynab.Client</AssemblyName>
+        <RootNamespace>Nrrdio.Ynab.Client</RootNamespace>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\MacrossSoftware\ClassLibraries\Macross.Json.Extensions\Code\Macross.Json.Extensions.csproj" />
-    <ProjectReference Include="..\Nrrdio.Utilities\Nrrdio.Utilities.Web\Nrrdio.Utilities.Web.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\MacrossSoftware\ClassLibraries\Macross.Json.Extensions\Code\Macross.Json.Extensions.csproj" />
+        <ProjectReference Include="..\Nrrdio.Utilities\Nrrdio.Utilities.Web\Nrrdio.Utilities.Web.csproj" />
+    </ItemGroup>
 
 </Project>
